[gd_scene load_steps=18 format=2]

[ext_resource path="res://characters/brain_boss.gd" type="Script" id=1]
[ext_resource path="res://assets/brain_boss/brain_boss1.png" type="Texture" id=2]
[ext_resource path="res://assets/brain_boss/brain_boss.png" type="Texture" id=3]
[ext_resource path="res://assets/gui/eye4.1.png" type="Texture" id=4]
[ext_resource path="res://assets/gui/eye3.1.png" type="Texture" id=5]
[ext_resource path="res://assets/gui/eyebrow.png" type="Texture" id=6]
[ext_resource path="res://assets/gui/eyebrow2.png" type="Texture" id=7]
[ext_resource path="res://assets/gui/eye4.2.png" type="Texture" id=8]
[ext_resource path="res://assets/gui/cuteeye.png" type="Texture" id=9]
[ext_resource path="res://assets/gui/eyelid2.1.png" type="Texture" id=10]
[ext_resource path="res://assets/gui/eyelid1.1.png" type="Texture" id=11]

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 1, 0, 0, 1 )
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50
corner_detail = 20
expand_margin_left = 10.0
expand_margin_right = 10.0
anti_aliasing = false

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 2.0
} ]

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("enemyEyes/eye1:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("enemyEyes/eye2:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("friendEyes/eyelid2:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -67, -76 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("friendEyes/eyelid1:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -12, -85 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath(".:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "eyerotate"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("enemyEyes/eye1:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.4, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0, -360.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("enemyEyes/eye2:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.4, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0, -360.0 ]
}

[sub_resource type="Animation" id=6]
resource_name = "fade"
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 2 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "friendeye"
length = 1.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("friendEyes/eyelid2:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -67, -76 ), Vector2( -61, -30 ), Vector2( -67, -76 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("friendEyes/eyelid1:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 0.5, -2, 2 ),
"update": 0,
"values": [ Vector2( -8, -87 ), Vector2( -20, -40 ), Vector2( -8, -87 ) ]
}

[node name="brain_boss" type="KinematicBody2D" groups=["enemy"]]
script = ExtResource( 1 )

[node name="Control2" type="Control" parent="."]
visible = false
margin_left = -120.0
margin_top = -141.0
margin_right = 904.0
margin_bottom = 459.0
rect_scale = Vector2( 0.237486, 0.383989 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ProgressBar" type="ProgressBar" parent="Control2"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -450.0
margin_right = 450.0
margin_bottom = 30.0
rect_pivot_offset = Vector2( 450, 15 )
custom_styles/fg = SubResource( 2 )
max_value = 1000.0
value = 100.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="enemyEyes" type="Node2D" parent="."]

[node name="eye1" type="Sprite" parent="enemyEyes"]
position = Vector2( -65, -39 )
scale = Vector2( 0.055, 0.055 )
texture = ExtResource( 5 )

[node name="eye2" type="Sprite" parent="enemyEyes"]
position = Vector2( -17, -45 )
scale = Vector2( 0.055, 0.055 )
texture = ExtResource( 4 )

[node name="friendEyes" type="Node2D" parent="."]
visible = false

[node name="eye1" type="Sprite" parent="friendEyes"]
position = Vector2( -64, -46 )
scale = Vector2( 0.078, 0.078 )
texture = ExtResource( 9 )

[node name="eye2" type="Sprite" parent="friendEyes"]
position = Vector2( -18, -45 )
scale = Vector2( 0.078, 0.078 )
texture = ExtResource( 8 )

[node name="eyelid1" type="Sprite" parent="friendEyes"]
position = Vector2( -12, -85 )
scale = Vector2( 0.136, 0.081 )
texture = ExtResource( 10 )

[node name="eyelid2" type="Sprite" parent="friendEyes"]
position = Vector2( -67, -76 )
scale = Vector2( 0.1362, 0.0813694 )
texture = ExtResource( 11 )

[node name="eyebrows" type="Sprite" parent="friendEyes"]
position = Vector2( -73, -67 )
scale = Vector2( 0.12025, 0.137882 )
z_index = 1
texture = ExtResource( 6 )

[node name="eyebrows2" type="Sprite" parent="friendEyes"]
position = Vector2( -17, -78 )
scale = Vector2( 0.111513, 0.122498 )
z_index = 1
texture = ExtResource( 7 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.25, 0.25 )
frames = SubResource( 1 )
playing = true

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
visible = false
polygon = PoolVector2Array( -86, -73, -110, -46, -123, -24, -126, -1, -122, 23, -113, 35, -95, 56, -81, 63, -62, 63, -49, 58, -43, 80, -17, 86, 16, 79, 36, 86, 56, 81, 72, 116, 90, 124, 100, 114, 100, 84, 96, 66, 112, 44, 112.773, 30.6372, 108, 27, 119, 14, 123, -12, 120, -46, 115, -54, 110, -75, 98, -89, 85, -97, 71, -107, 49, -109, 8, -109, -19, -106, -60, -90 )

[node name="projectiles" type="Node2D" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 3 )
anims/eyerotate = SubResource( 4 )
anims/fade = SubResource( 6 )
anims/friendeye = SubResource( 5 )
